// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainLayout /> should render to match snapshot 1`] = `
<DocumentFragment>
  .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  position: relative;
  width: 100%;
  --tw-bg-opacity: 1;
  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
  --tw-text-opacity: 1;
  color: rgb(156 163 175 / var(--tw-text-opacity));
  min-height: 100vh;
}

.c3 {
  width: 100%;
  --tw-bg-opacity: 1;
  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
}

.c4 {
  position: relative;
  height: 100%;
  overflow-x: auto;
}

<div
    class="c0 c1"
  >
    <div>
      <button
        data-testid="btn2"
      >
        Menu Item
      </button>
    </div>
    <div
      class="c2 c3"
    >
      <div>
        <button
          data-testid="btn1"
        >
          Toggle Sidebar
        </button>
      </div>
      <div
        class="c0 c4"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<MainLayout /> should render to wrong location path 1`] = `
<DocumentFragment>
  .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  position: relative;
  width: 100%;
  --tw-bg-opacity: 1;
  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
  --tw-text-opacity: 1;
  color: rgb(156 163 175 / var(--tw-text-opacity));
  height: 100vh;
}

.c3 {
  width: 100%;
  --tw-bg-opacity: 1;
  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
}

.c4 {
  position: relative;
  height: 100%;
  overflow-x: auto;
}

<div
    class="c0 c1"
  >
    <div>
      <button
        data-testid="btn2"
      >
        Menu Item
      </button>
    </div>
    <div
      class="c2 c3"
    >
      <div>
        <button
          data-testid="btn1"
        >
          Toggle Sidebar
        </button>
      </div>
      <div
        class="c0 c4"
      />
    </div>
  </div>
</DocumentFragment>
`;
